change engine for glitch deployment and some notes for section on html

--- a/views/homePage/index.html
+++ b/views/homePage/index.html
@@ -315,7 +315,7 @@
     </style>
   </head>
   <body>
-    <!----- HEADER SECTION ----->
+    <!----- HEADER SECTION HTML ----->
     <header class="header">
       <div class="logo-container">
         <img src="/images/logo.png" alt="Ky Long Logo" class="logo" />
@@ -369,8 +369,9 @@
         alt="Industrial Facility"
       />
     </div>
+    <!----- END OF HEADER SECTION HTML ----->
 
-    <!----- INTRO SECTION ----->
+    <!----- INTRO SECTION HTML ----->
     <h1 class="page-intro">GIỚI THIỆU DOANH NGHIỆP KỲ LONG</h1>
 
     <div class="tab-container">
@@ -577,10 +578,12 @@
       </div>
     </div>
 
-    <!---- NEXT SECTION HERE ----->
+    <!----- END OF INTRO SECTION HTML ----->
+
+    <!---- NEXT SECTION HTML HERE ----->
 
     <script>
-      /////HEADER JS
+      /////HEADER SECTION JS
       // Simple JavaScript for navigation highlighting
       const navItems = document.querySelectorAll(".nav-menu li a");
 
